--- a/about-me.html
+++ b/about-me.html
@@ -37,30 +37,19 @@
 					</div>
 				</div>
 				<div class="content">
-					<div class="contact clearfix">
-						<h2 class="contact_heading">У вас интересный проект? Нaпишите мне! </h2>
-						<div class="contact-form">
-							<form action="get">
-								<div class="half_width">
-								<label>Имя
-								<input type="text" name="name" placeholder="Как к Вам обращаться">
-								</label>
-								</div>
-								<div class="half_width pl">
-								<label>E-mail
-								<input type="text" name="email" placeholder="Куда мне писать">
-								</label>
-								</div>
-								<div class="message">
-								<label>Сообщение
-								<input type="text" name="text" placeholder="Кратко в чем суть" class="message">
-								</label>
-								</div>  
-								<input type="submit" name="send" value="Отправить">
-								<input type="reset" value="Очистить">
-							</form>
+					<div class="main_myworks clearfix">
+						<div class="main__inform-wrapper">
+						<h2 class="content_header">Мои работы</h2></div>
+						<ul class="main_myworkslist">
+							<li><a href=""><img src="" alt=""></a><a href="" class="main_url">www.site.ru</a><span>Какакя-то информация о тексте</span></li>
+							<li><a href=""><img src="" alt=""></a><a href="" class="main_url">www.site.ru</a><span>Какакя-то информация о тексте</span></li>
+							<li><a href=""><img src="" alt=""></a><a href="" class="main_url">www.site.ru</a><span>Какакя-то информация о тексте</span></li>
+							<li><a href=""><img src="" alt=""></a><a href="" class="main_url">www.site.ru</a><span>Какакя-то информация о тексте</span></li>
+							<li><a href=""><img src="" alt=""></a><a href="" class="main_url">www.site.ru</a><span>Какакя-то информация о тексте</span></li>
+							<li><a href=""><img src="" alt=""></a><a href="" class="main_url">www.site.ru</a><span>Какакя-то информация о тексте</span></li>
+							<li><a href=""><img src="" alt=""></a><a href="" class="main_url">www.site.ru</a><span>Какакя-то информация о тексте</span></li>
+						</ul>
 						</div>
-						
 					</div>
 				</div>
 			</div>
