--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 				<div class="sidebar">
 					<div class="sidebar__about-me">
 						<ul>
-							<li><a href="">Обо мне</a></li>
-							<li><a href="">Мои работы</a></li>
-							<li><a href="">Связаться со мной</a></li>
+							<li><a href="/about-me.html">Обо мне</a></li>
+							<li><a href="/">Мои работы</a></li>
+							<li><a href="/contact-me.html">Связаться со мной</a></li>
 						</ul>
 					</div>
 					<div class="sidebar__contacts">
