--- a/about-me.html
+++ b/about-me.html
@@ -10,10 +10,10 @@
 			<div class="logo"><img src="img/logo.png" alt=""></div>
 			<div class="social-menu">
 				<ul>
-					<li><a href=""><img src="img/vk-logo.png" alt=""></a></li>
-					<li><a href=""><img src="img/twitter-logo.png" alt=""></a></li>
-					<li><a href=""><img src="img/fb-logo.png" alt=""></a></li>
-					<li><a href=""><img src="img/gh-logo.png" alt=""></a></li>
+					<li><a class="vk" href="https://vk.com/id6723558"></a></li>
+					<li><a class="twi" href="https://twitter.com/NSKlimit"></a></li>
+					<li><a class="fb" href="https://www.facebook.com/?q=#/shilov.george"></a></li>
+					<li><a class="gh" href="https://github.com/GeorgeShilov"></a></li>
 				</ul>
 			</div>
 		</div>
@@ -22,17 +22,17 @@
 				<div class="sidebar">
 					<div class="sidebar__about-me">
 						<ul>
-							<li><a href="">Обо мне</a></li>
-							<li><a href="">Мои работы</a></li>
-							<li><a href="">Связаться со мной</a></li>
+							<li><a href="/index.html">Обо мне</a></li>
+							<li><a href="/about-me.html">Мои работы</a></li>
+							<li><a href="/contact-me.html">Связаться со мной</a></li>
 						</ul>
 					</div>
 					<div class="sidebar__contacts">
 						<div class="sidebar__contact-title">Контакты</div>
 						<ul>
-							<li class="sidebar__contact-mail">shilov.g.s@gmail.com</li>
-							<li class="sidebar__contact-phone">+79602771883</li>
-							<li class="sidebar__contact-skype">George_Shilov</li>
+							<li class="sidebar__contact-mail"><a href="mialto:shilov.g.s@gmail.com">shilov.g.s@gmail.com</a></li>
+							<li class="sidebar__contact-phone"><a href="tel:+79602771883">+79602771883</a></li>
+							<li class="sidebar__contact-skype"><a href="skype:George_Shilov">George_Shilov</a></li>
 						</ul>
 					</div>
 				</div>
